Add icons to nav items and arrange them

--- a/index.html
+++ b/index.html
@@ -11,22 +11,55 @@
 
 <body>
     <div id="main-container">
+
         <div id="nav-container">
-            <p>Dashboard</p>
+
+            <div id="logo" class="nav-item">
+                <img src="https://img.icons8.com/material-sharp/48/000000/dashboard-layout.png" />
+                <p>Dashboard</p>
+            </div>
             <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Tasks</li>
-                    <li>Communities</li>
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
+                <ul id="nav-list">
+                    <li class="list-item nav-item">
+                        <img src="https://img.icons8.com/material-rounded/64/000000/home.png" />
+                        <p>Home</p>
+                    </li>
+                    <li class="list-item nav-item">
+                        <img src="https://img.icons8.com/small/64/000000/user.png" />
+                        <p>Profile</p>
+                    </li>
+                    <li class="list-item nav-item">
+                        <img src="https://img.icons8.com/material-rounded/64/000000/mail.png" />
+                        <p>Messages</p>
+                    </li>
+                    <li class="list-item nav-item">
+                        <img src="https://img.icons8.com/material-rounded/64/000000/time-machine.png" />
+                        <p>History</p>
+                    </li>
+                    <li class="list-item nav-item">
+                        <img src="https://img.icons8.com/material-rounded/64/000000/tasks.png" />
+                        <p>Tasks</p>
+                    </li>
+                    <li class="list-item nav-item">
+                        <img src="https://img.icons8.com/small/64/000000/conference-call.png" />
+                        <p>Communities</p>
+                    </li>
+                    <li class="list-item nav-item">
+                        <img src="https://img.icons8.com/material-rounded/64/000000/settings.png" />
+                        <p>Settings</p>
+                    </li>
+                    <li class="list-item nav-item">
+                        <img src="https://img.icons8.com/small/64/000000/help.png" />
+                        <p>Support</p>
+                    </li>
+                    <li class="list-item nav-item">
+                        <img src="https://img.icons8.com/material-rounded/64/000000/security-checked.png" />
+                        <p>Privacy</p>
+                    </li>
                 </ul>
             </nav>
         </div>
+
         <div id="dashboard-container">
             <header>
                 <div class="header-sub-section">
@@ -55,6 +88,7 @@
                     </div>
                 </div>
             </header>
+
             <main id="main-content-container">
                 <div id="projects">
                     <div class="project">
@@ -78,6 +112,7 @@
                             amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?</p>
                     </div>
                 </div>
+
                 <div id="announcements">
                     <div class="announcement">
                         <h3>Site Maintenance</h3>
@@ -95,6 +130,7 @@
                             amet.</p>
                     </div>
                 </div>
+
                 <div id="trending">
                     <div id="profile-container">
                         <span>pfp</span>
@@ -112,8 +148,11 @@
                         <p>Lorem ipsum dolor.</p>
                     </div>
                 </div>
+
             </main>
+
         </div>
+
     </div>
 </body>
 
