Lay out header elements and Add images

--- a/index.html
+++ b/index.html
@@ -65,21 +65,27 @@
                 <div class="header-sub-section">
                     <div id="search-container">
                         <div id="search">
-                            <span>Q-icon</span>
-                            <input type="search" name="" id="search-bar">
+                            <img src="https://img.icons8.com/glyph-neue/64/000000/search--v1.png" class="header-icon"/>
                         </div>
+                            <input type="search" name="" id="search-bar">
                     </div>
                     <div id="profile-container">
-                        <span>bell-icon</span>
-                        <span>pfp</span>
+                        <img src="https://img.icons8.com/material-sharp/24/000000/appointment-reminders--v1.png" class="header-icon"/>
+                        <div class="header-icon">
+                            <img src="./images/yellow-one-eyed.png" alt=""class="header-icon" >
+                        </div>
                         <p>Morgan</p>
                     </div>
                 </div>
                 <div class="header-sub-section">
                     <div id="greeting-container">
-                        <span>pfp</span>
-                        <p>Hi there, </p>
-                        <p>Morgan Oakley</p>
+                        <div class="profile-img-container">
+                            <img src="./images/yellow-one-eyed.png" alt="">
+                        </div>
+                        <div id="greeting">
+                            <p>Hi there, </p>
+                            <p id="username">Morgan Oakley <span>(@morgan)</span></p>
+                        </div>
                     </div>
                     <div id="buttons-container">
                         <input type="button" value="New">
@@ -132,18 +138,24 @@
                 </div>
 
                 <div id="trending">
-                    <div id="profile-container">
-                        <span>pfp</span>
+                    <div class="profile-container">
+                        <div>
+                            <img src="./images/one-eyed.png" alt="">
+                        </div>
                         <p>Morgan</p>
                         <p>Lorem ipsum dolor.</p>
                     </div>
-                    <div id="profile-container">
-                        <span>pfp</span>
+                    <div class="profile-container">
+                        <div class="profile-img-container">
+                            <img src="./images/five-eyed.png" alt="">
+                        </div>
                         <p>Morgan</p>
                         <p>Lorem ipsum dolor.</p>
                     </div>
-                    <div id="profile-container">
-                        <span>pfp</span>
+                    <div class="profile-container">
+                        <div>
+                            <img src="./images/zipper-mouth.png" alt="">
+                        </div>
                         <p>Morgan</p>
                         <p>Lorem ipsum dolor.</p>
                     </div>
