Add heading and style the announcement section(div)

--- a/index.html
+++ b/index.html
@@ -117,20 +117,23 @@
                 </div>
 
                 <div id="announcements">
-                    <div class="announcement">
-                        <h3>Site Maintenance</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                            amet.</p>
-                    </div>
-                    <div class="announcement">
-                        <h3>Community Share Day</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                            amet.</p>
-                    </div>
-                    <div class="announcement">
-                        <h3>Update Privacy Policy</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                            amet.</p>
+                    <h2>Announcements</h2>
+                    <div id="announcement-container">
+                        <div class="announcement">
+                            <h3>Site Maintenance</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
+                                amet.</p>
+                        </div>
+                        <div class="announcement">
+                            <h3>Community Share Day</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
+                                amet.</p>
+                        </div>
+                        <div class="announcement">
+                            <h3>Update Privacy Policy</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
+                                amet.</p>
+                        </div>
                     </div>
                 </div>
 
