Add heading/title to the project section

--- a/index.html
+++ b/index.html
@@ -93,26 +93,36 @@
             </header>
 
             <main id="main-content">
-                <div id="projects">
-                    <div class="project">
-                        <h3>Project 1</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                            amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?</p>
-                    </div>
-                    <div class="project">
-                        <h3>Project 2</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                            amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?</p>
-                    </div>
-                    <div class="project">
-                        <h3>Project 3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                            amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?</p>
-                    </div>
-                    <div class="project">
-                        <h3>Project 4</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                            amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?</p>
+                <div id="project-section">
+                    <h2>Projects</h2>
+                    <div id="projects">
+                        <div class="project">
+                            <h3>Project 1</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
+                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
+                            </p>
+                        </div>
+                        <div class="project">
+                            <h3>Project 2</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
+                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
+                            </p>
+                        </div>
+                        <div class="project">
+                            <h3>Project 3</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
+                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
+                            </p>
+                        </div>
+                        <div class="project">
+                            <h3>Project 4</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
+                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
+                            </p>
+                        </div>
                     </div>
                 </div>
 
