Add heading to the trending section and refactor code
Rename announcement section ids. All heading have same styles
so add a class to get rid of redundant styling.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
             <main id="main-content">
                 <div id="project-section">
-                    <h2>Projects</h2>
+                    <h2 class="section-title">Projects</h2>
                     <div id="projects">
                         <div class="project">
                             <h3>Project 1</h3>
@@ -126,9 +126,9 @@
                     </div>
                 </div>
 
-                <div id="announcements">
-                    <h2>Announcements</h2>
-                    <div id="announcement-container">
+                <div id="announcement-section">
+                    <h2 class="section-title">Announcements</h2>
+                    <div id="announcements">
                         <div class="announcement">
                             <h3>Site Maintenance</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
@@ -147,32 +147,35 @@
                     </div>
                 </div>
 
-                <div id="trending-profiles">
-                    <div id="trending-profile" class="profile">
-                        <div class="profile-picture">
-                            <img src="./images/one-eyed.png" alt="">
+                <div id="trending-section">
+                    <h2 class="section-title">Trending</h2>
+                    <div id="trending-profiles">
+                        <div id="trending-profile" class="profile">
+                            <div class="profile-picture">
+                                <img src="./images/one-eyed.png" alt="">
+                            </div>
+                            <div class="trending-profile-details">
+                                <p>Morgan</p>
+                                <p>Lorem ipsum dolor.</p>
+                            </div>
                         </div>
-                        <div class="trending-profile-details">
-                            <p>Morgan</p>
-                            <p>Lorem ipsum dolor.</p>
+                        <div id="trending-profile" class="profile">
+                            <div class="profile-picture">
+                                <img src="./images/five-eyed.png" alt="">
+                            </div>
+                            <div class="trending-profile-details">
+                                <p>Morgan</p>
+                                <p>Lorem ipsum dolor.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div id="trending-profile" class="profile">
-                        <div class="profile-picture">
-                            <img src="./images/five-eyed.png" alt="">
-                        </div>
-                        <div class="trending-profile-details">
-                            <p>Morgan</p>
-                            <p>Lorem ipsum dolor.</p>
-                        </div>
-                    </div>
-                    <div id="trending-profile" class="profile">
-                        <div class="profile-picture">
-                            <img src="./images/zipper-mouth.png" alt="">
-                        </div>
-                        <div class="trending-profile-details">
-                            <p>Morgan</p>
-                            <p>Lorem ipsum dolor.</p>
+                        <div id="trending-profile" class="profile">
+                            <div class="profile-picture">
+                                <img src="./images/zipper-mouth.png" alt="">
+                            </div>
+                            <div class="trending-profile-details">
+                                <p>Morgan</p>
+                                <p>Lorem ipsum dolor.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
