Add project options and style the project section

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
                                 amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
                             </p>
+                            <div class="options">
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png" class="icon"/>
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png" class="icon"/>
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon"/>
+                            </div>
                         </div>
                         <div class="project">
                             <h3>Project 2</h3>
@@ -109,6 +114,11 @@
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
                                 amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
                             </p>
+                            <div class="options">
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png" class="icon"/>
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png" class="icon"/>
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon"/>
+                            </div>
                         </div>
                         <div class="project">
                             <h3>Project 3</h3>
@@ -116,12 +126,22 @@
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
                                 amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
                             </p>
+                            <div class="options">
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png" class="icon"/>
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png" class="icon"/>
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon"/>
+                            </div>
                         </div>
                         <div class="project">
                             <h3>Project 4</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
                                 amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
                             </p>
+                            <div class="options">
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png" class="icon"/>
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png" class="icon"/>
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon"/>
+                            </div>
                         </div>
                     </div>
                 </div>
