Style trending section

--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
                                 amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
                             </p>
                             <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png" class="icon"/>
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png" class="icon"/>
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon"/>
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
                             </div>
                         </div>
                         <div class="project">
@@ -115,9 +117,11 @@
                                 amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
                             </p>
                             <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png" class="icon"/>
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png" class="icon"/>
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon"/>
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
                             </div>
                         </div>
                         <div class="project">
@@ -127,9 +131,11 @@
                                 amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
                             </p>
                             <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png" class="icon"/>
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png" class="icon"/>
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon"/>
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
                             </div>
                         </div>
                         <div class="project">
@@ -138,9 +144,11 @@
                                 amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
                             </p>
                             <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png" class="icon"/>
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png" class="icon"/>
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon"/>
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
                             </div>
                         </div>
                     </div>
@@ -170,7 +178,7 @@
                 <div id="trending-section">
                     <h2 class="section-title">Trending</h2>
                     <div id="trending-profiles">
-                        <div id="trending-profile" class="profile">
+                        <div class="profile trending-profile">
                             <div class="profile-picture">
                                 <img src="./images/one-eyed.png" alt="">
                             </div>
@@ -179,7 +187,7 @@
                                 <p>Lorem ipsum dolor.</p>
                             </div>
                         </div>
-                        <div id="trending-profile" class="profile">
+                        <div class="profile trending-profile">
                             <div class="profile-picture">
                                 <img src="./images/five-eyed.png" alt="">
                             </div>
@@ -188,7 +196,7 @@
                                 <p>Lorem ipsum dolor.</p>
                             </div>
                         </div>
-                        <div id="trending-profile" class="profile">
+                        <div class="profile trending-profile">
                             <div class="profile-picture">
                                 <img src="./images/zipper-mouth.png" alt="">
                             </div>
